### This file was generated by Nexus Schema
### Do not make changes to this file directly


type Department {
  code: String
  description: String
  id: String
  institutionId: String
  name: String
  teachers: [Teacher]
}

type Institution {
  id: String
  name: String
  users: [User]
}

type Mutation {
  createUser(email: String!, institutionId: String!, passwordHash: String!): User
  deleteUser(id: String!): User
  updateUser(email: String, id: String!, isActive: String): User
}

type Query {
  department(id: String!): Department
  departments: [Department]
  institutions: [Institution]
  teacher(id: String!): Teacher
  teachers: [Teacher]
  user(id: String!): User
  users: [User]
}

type Teacher {
  departmentId: String
  email: String
  id: String
  name: String
}

type User {
  email: String
  id: String
  institution: Institution
  isActive: Boolean
}